Add ls/quit commands to console demo client